Added 'patchwork' functionality.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,12 @@ export(get_axis_title)
 export(get_figure_dims)
 export(karyogram_geoms)
 export(normalize_score_column)
+export(patchwork_annotations)
+export(patchwork_bins)
+export(patchwork_matrix)
+export(patchwork_rot45)
+export(patchwork_xaxis)
+export(patchwork_yaxis)
 export(plotCombo_matrix_with_kary)
 export(plotCombo_pyramid_tracks)
 export(plot_hic)
