Added bin reading functionality to read_cooler_hdf5.R, i.e. row/column data.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(rotate_points_45)
 export(translocation_matrix)
 export(trim_rot45)
 import(GenomicRanges)
+import(IRanges)
 import(Rhdf5lib)
 import(Rsamtools)
 import(clugPac)
