Moved several functions from ascFunctions to the general hicPac package.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,11 +6,18 @@ export(get_axis_labs)
 export(get_axis_title)
 export(get_figure_dims)
 export(karyogram_geoms)
+export(nlf_parse_assembly)
+export(nlf_read_assembly_file)
+export(nlf_read_loop_file)
 export(normalize_score_column)
 export(patchwork_annotations)
+export(patchwork_bedgraph)
+export(patchwork_bedgraph_peak_geoms)
 export(patchwork_bins)
+export(patchwork_cna)
 export(patchwork_matrix)
 export(patchwork_rot45)
+export(patchwork_rotate_annotations)
 export(patchwork_xaxis)
 export(patchwork_yaxis)
 export(plotCombo_matrix_with_kary)
@@ -38,11 +45,13 @@ import(data.table)
 import(dplyr)
 import(egg)
 import(ggplot2)
+import(ggsci)
 import(grid)
 import(gridExtra)
 import(magrittr)
 import(rhdf5)
 import(scales)
+import(stringr)
 import(tibble)
 import(tictoc)
 import(tidyr)
