Added patchwork_region_outlines() function to get polygon coordinates of pixel regions.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(patchwork_bedgraph_peak_geoms)
 export(patchwork_bins)
 export(patchwork_cna)
 export(patchwork_matrix)
+export(patchwork_region_outlines)
 export(patchwork_rot45)
 export(patchwork_rotate_annotations)
 export(patchwork_xaxis)
