Added read_(tad/compartment) functions, minor changes to patchwork_xaxis.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,10 +28,12 @@ export(plot_hic_matrix)
 export(plot_hic_matrix_pyramid)
 export(plot_hic_matrix_to_file)
 export(plot_karyotypes)
+export(read_compartment_file)
 export(read_cooler_bins_hdf5)
 export(read_cooler_hdf5)
 export(read_cooler_hdf5_rot45)
 export(read_matrix_file)
+export(read_tad_file)
 export(rotate_pix_45)
 export(rotate_points_45)
 export(translocation_matrix)
