Updates to cooler functions to allow variable input columns (i.e. allow use of non-standardized coolers, etc.)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(patchwork_yaxis)
 export(plotCombo_matrix_with_kary)
 export(plotCombo_pyramid_tracks)
 export(plot_hic)
+export(plot_hic_histogram)
 export(plot_hic_matrix)
 export(plot_hic_matrix_pyramid)
 export(plot_hic_matrix_to_file)
@@ -38,6 +39,7 @@ export(rotate_pix_45)
 export(rotate_points_45)
 export(translocation_matrix)
 export(trim_rot45)
+import(GenomicAlignments)
 import(GenomicRanges)
 import(IRanges)
 import(Rhdf5lib)
@@ -58,3 +60,4 @@ import(stringr)
 import(tibble)
 import(tictoc)
 import(tidyr)
+import(viridis)
