Added pack_cooler_hdf5() function for converting pixel tibble formats into coolers within R.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(nlf_parse_assembly)
 export(nlf_read_assembly_file)
 export(nlf_read_loop_file)
 export(normalize_score_column)
+export(pack_cooler_hdf5)
 export(patchwork_annotations)
 export(patchwork_bedgraph)
 export(patchwork_bedgraph_peak_geoms)
@@ -62,6 +63,7 @@ import(grid)
 import(gridExtra)
 import(magrittr)
 import(rhdf5)
+import(rhdf5filters)
 import(scales)
 import(stringr)
 import(tibble)
