Updates to patchwork_ functions WRT OGM contigs.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(plotCombo_matrix_with_kary)
 export(plotCombo_pyramid_tracks)
 export(plot_hic)
 export(plot_hic_histogram)
+export(plot_hic_loops)
 export(plot_hic_matrix)
 export(plot_hic_matrix_pyramid)
 export(plot_hic_matrix_to_file)
