Updates to patchwork functions regarding a few glitches, many of which created new glitches and were reversed.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(nlf_read_loop_file)
 export(normalize_score_column)
 export(pack_cooler_hdf5)
 export(patchwork_annotations)
+export(patchwork_annotations_2d)
 export(patchwork_bedgraph)
 export(patchwork_bedgraph_peak_geoms)
 export(patchwork_bins)
@@ -40,6 +41,7 @@ export(read_cooler_hdf5)
 export(read_cooler_hdf5_rot45)
 export(read_matrix_file)
 export(read_tad_file)
+export(reflect_pixel_matrix)
 export(rotate_pix_45)
 export(rotate_points_45)
 export(translocation_matrix)
