Mistake in patchwork_annotations_2D() referred to 'tb_regs', which was wrong, but since it was frequently used in upper environments it didn't lead to failure, just bad behavior.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ export(plot_karyotypes)
 export(read_compartment_file)
 export(read_cooler_bins_hdf5)
 export(read_cooler_hdf5)
+export(read_cooler_hdf5_mc)
 export(read_cooler_hdf5_rot45)
 export(read_matrix_file)
 export(read_tad_file)
@@ -64,6 +65,7 @@ import(ggsci)
 import(grid)
 import(gridExtra)
 import(magrittr)
+import(parallel)
 import(rhdf5)
 import(rhdf5filters)
 import(scales)
